# RCrA

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
RCrA/: __init__.py
RCrA/dirty_map/: 12CO_dirty.py
RCrA/make_mask/: 13CO_mm.py
python_template/: __init__.py
