[tool.poetry]
name = "python_template"
version = "0.1.0"
description = "Template of python package."
authors = ["Takeru Nishioka <tnishioka@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TakeruNishioka/python_template.git"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
black = "^21.12b"
flake8 = "^3.8"
ipykernel = "^6.6"
m2r2 = "^0.2"
pytest = "^5.2"
sphinx = "^3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
